<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:paddingLeft="@dimen/guide_page_123_padding_left_right" android:paddingRight="@dimen/guide_page_123_padding_left_right" android:layout_width="@dimen/sentrymode_desc_width" android:layout_height="@dimen/sentrymode_desc_height"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="180.0dip" android:src="@drawable/ic_guide_page4" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/sentry_mode_desc_title" android:textColor="@color/common_title_text_color_one" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="57.0dip" android:text="@string/guide_page4_title" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/sentry_mode_desc_content" android:textColor="@color/common_title_text_color_one_2" android:id="@id/guide_desc_t1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="414.0dip" android:text="@string/guide_page4_desc_t1" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/sentry_mode_desc_content" android:textColor="@color/common_title_text_color_one_2" android:id="@id/guide_desc_t2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="9.0dip" android:text="@string/guide_page4_desc_t2" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/guide_desc_t1" />
    <TextView android:textSize="@dimen/sentry_mode_desc_content" android:textColor="@color/common_title_text_color_one_2" android:id="@id/guide_desc_t3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="9.0dip" android:text="@string/guide_page4_desc_t3" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/guide_desc_t2" />
    <TextView android:textSize="@dimen/sentry_mode_desc_content" android:textColor="@color/common_title_text_color_one_2" android:id="@id/guide_desc_t4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="9.0dip" android:text="@string/guide_page4_desc_t4" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/guide_desc_t3" />
    <TextView android:textSize="@dimen/sentry_mode_desc_content" android:textColor="@color/common_title_text_color_one_2" android:id="@id/guide_desc_t5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="9.0dip" android:text="@string/guide_page4_desc_t5" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/guide_desc_t4" />
    <TextView android:textSize="@dimen/sentry_mode_desc_content_2" android:textColor="@color/common_content_text_color_one" android:id="@id/guide_desc2_txt" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/guide_page4_desc_2" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/guide_desc_t5" />
    <com.zeekr.component.button.ZeekrButton android:textSize="@dimen/sentry_mode_desc_btn_sp" android:gravity="center" android:id="@id/btn_close" android:layout_width="@dimen/sentrymode_desc_button_width" android:layout_height="@dimen/sentrymode_desc_button_height" android:layout_marginTop="64.0dip" android:text="@string/common_know" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/guide_desc2_txt" style="@style/Widget.ZeekrButton.RealButton" />
</androidx.constraintlayout.widget.ConstraintLayout>